--- a/src/Presentation.Web/Presentation.Web/Presentation.Web.csproj
+++ b/src/Presentation.Web/Presentation.Web/Presentation.Web.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Presentation.Web.Client\Presentation.Web.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="10.0.0-rc.1.25458.5" />
   </ItemGroup>
 
 </Project>
